--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
       "paypal/rest-api-sdk-php": "*",
       "ext-json": "*",
         "mustache/mustache": "^2.14",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "symfony/dotenv": "^5.4"
     },
     "require-dev": {
         "symfony/var-dumper": "*"
